Added error messages to attributes

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -6,6 +6,8 @@
         <%= pluralize(@article.errors.count, "error") %> prohibited
         this article from being saved:
       </h2>
+      <% @article.a_method_used_for_validation_purposes %>
+
       <ul>
         <% @article.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
