--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,3 +1,36 @@
 // Place all the styles related to the Articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+td,th{
+  height:50px;
+  text-align: center;
+}
+.actions{
+  width:50px;
+  text-decoration: none;
+}
+.buttons{
+
+}
+a{
+  text-decoration: none;
+  background-color: green;
+  border: 1px solid black;
+  color: white;
+  text-decoration: none;
+  text-underline: none;
+  font-size: 16px;
+  cursor: pointer;
+}
+a:hover, a:active {
+  background-color: red;
+
+}
+
+
+
