--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,17 +1,18 @@
-<table>
+<link rel="stylesheet" href="articles.scss">
+<table border=1>
   <tr>
     <th>Title</th>
     <th>Text</th>
-    <th colspan="3"></th>
+    <th colspan="3">Actions</th>
   </tr>
 
   <% @articles.each do |article| %>
     <tr>
-      <td><%= article.title %></td>
-      <td><%= article.text %></td>
-      <td><%= link_to 'Show', article_path(article) %></td>
-      <td><%= link_to 'Edit', edit_article_path(article) %></td>
-      <td><%= link_to 'Destroy', article_path(article),
+      <td style="width:100px"><%= article.title %></td>
+      <td style="width:300px"><%= article.text %></td>
+      <td class="actions buttons"><%= link_to 'Show', article_path(article) %></td>
+      <td class="actions buttons"><%= link_to 'Edit', edit_article_path(article) %></td>
+      <td class="actions buttons"><%= link_to 'Destroy', article_path(article),
                       method: :delete,
                       data: { confirm: 'Are you sure?' } %></td>
 
