--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -18,6 +18,7 @@
 
     </tr>
   <% end %>
-</table>
+</table><br></br>
+<%= link_to 'Show only comments', article_comments_path(15) %>
 <br></br>
 <%= link_to 'Back', root_path %>
