--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Welcome#index</h1>
 <%= link_to 'New article', new_article_path %><br></br>
 
-<%= link_to 'show all article', articles_path%>
+<%= link_to 'show all articles', articles_path%>
