--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -26,6 +26,11 @@
     <%= form.text_area :text %>
   </p>
 
+  <%= form.select(:article_id, options_from_collection_for_select(Article.all, :id, :title) ) %>
+  <%= select_year(2009) %>
+  <%= select_year(Time.now) %>
+  <br></br>
+  <%= form.file_field :picture %>
 
   <p>
     <%= form.submit %>
