--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -21,4 +21,8 @@
 </table><br></br>
 <%= link_to 'Show only comments', article_comments_path(15) %>
 <br></br>
+<p>just checking query param</p>
+<%= @myidvar %>
+<%= @msg %>
+<br></br>
 <%= link_to 'Back', root_path %>
