--- a/app/views/articles/non_Commented_Book.html.erb
+++ b/app/views/articles/non_Commented_Book.html.erb
@@ -1,3 +1,5 @@
 This has rendered into another action because this book has no comment
+<p>i have gotton it by another way</p>
+<%= @myparam %>
 <br></br>
 <%= link_to 'Back', articles_path %>
